--- a/Content/02_Safety & Compliance/f.TechSup Warranty & Calibration.htm
+++ b/Content/02_Safety & Compliance/f.TechSup Warranty & Calibration.htm
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="4" MadCap:lastHeight="883" MadCap:lastWidth="1222">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="4" MadCap:lastHeight="805" MadCap:lastWidth="624">
     <head>
     </head>
     <body>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. ">Technical Support</h2>
-        <h2>Technical Support</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.1. ">Technical Support</h2>
+        <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Technical Support</h2>
         <p>Technical support details are shown on the support card that came with your system.</p>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.2. ">Warranty</h2>
-        <h2>Warranty</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.2. ">Warranty</h2>
+        <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Warranty</h2>
         <p>The system is covered by warranty in the ‘as shipped’ condition. Any changes made to the system, including opening the platform to access internal components, except as provided for in this user guide and accompanying documentation, will invalidate the warranty.</p>
         <p>Contact <i>Customer Support</i> if you require more details about warranty policy before taking any action that may invalidate the warranty.</p>
         <p>This warranty includes the replacement of damaged or faulty components in the terms and period described in the ordering information. </p>
@@ -19,8 +19,8 @@
             <li>Where damage resulting from connection to, or use of any accessory or other product not approved or authorized by the Company.</li>
             <li>A product damaged by external causes such as fire, flooding, dirt, sand, weather conditions, battery leakage, blown fuse, theft or improper usage of any electrical source.</li>
         </ol>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.3. ">Calibration Requirements</h2>
-        <h2>Calibration Requirements</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.3. ">Calibration Requirements</h2>
+        <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Calibration Requirements</h2>
         <p>The digital electronic components used in this product do not have calibration requirements.</p>
     </body>
 </html>
